--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     </div>
 
                     <!-- form 1 start -->
-                    <form action="" class="cta__form form uniForm">
+                    <form class="cta__form form uniForm">
 
 	<!-- Hidden Required Fields -->
     <input type="hidden" name="project_name" value="LoftHouse">
@@ -311,14 +311,14 @@
     <input type="hidden" name="form_subject" value="top form">
     <!-- END Hidden Required Fields -->
 
-                        <input name="Имя" type="text" class="form__input" placeholder="Ваше имя" autocomplete="off" required>
-                        <input name="Телефон" data-tel-input type="text" class="form__input" placeholder="Ваш телефон" autocomplete="off" required>
+                        <input name="Name" type="text" class="form__input" placeholder="Ваше имя" autocomplete="off" required>
+                        <input name="Telephone" data-tel-input type="text" class="form__input" placeholder="Ваш телефон" autocomplete="off" required>
 
                         <p class="form__privacy form__privacy--bottom">
                             *Мы никому не передаем ваши данные. <br>И не сохраняем ваш номер в базу.
                         </p>
 
-                        <button class="form__btn">Посмотреть район</button>
+                        <button type="submit" class="form__btn">Посмотреть район</button>
                     </form>
                     <!-- form 1 end -->
 
