--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
         </div>
     </header>
 
+    <form class="uniForm">
+
+		<h3>Form 1</h3>
+
+		<!-- Hidden Required Fields -->
+		<input type="hidden" name="project_name" value="Site Name">
+		<input type="hidden" name="admin_email" value="admin@gmail.com">
+		<input type="hidden" name="form_subject" value="Form Subject 1">
+		<!-- END Hidden Required Fields -->
+
+		<input type="text" name="Name" placeholder="You name..." required><br>
+		<input type="text" name="E-mail" placeholder="You E-mail..." required><br>
+		<input type="text" name="Phone" placeholder="You phone..."><br>
+
+		<button >Send</button>
+
+	</form>
+    
     <main>
         <section class="benefits" id="benefits">
             <h2 class="visually-hidden">Преимущества ЖК</h2>
@@ -928,10 +946,7 @@
 
 
     <script src="https://api-maps.yandex.ru/2.1/?apikey=3ef580e9-615a-4135-9e25-80c2e197590f&lang=ru_RU" type="text/javascript"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.7.1.js"
-    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="./libs/phoneMask/mask.js"></script>
     <script src="./libs/phoneMask/mask_list.js"></script>
