--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="container">
             <h1 class="header__title">
-                Жилой комплекс FFFFFFF   <br>
+                Жилой комплекс GET   <br>
                 в историческом центре
                 <a href="#benefits">
                     <img
